[package]
name = "dirdups"
version = "0.1.0"
edition = "2021"
authors = ["Ilya Shalyapin <ishalyapin@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3.0"
walkdir = "2.3.2"
structopt = "0.3.25"
humanize-rs = "0.1.5"
indicatif = "0.16.2"
